2024-02-06T08:18:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7796627913 # 91
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 855 1561 / 871 1592
* notice: next accum: outdated-unq outdated-all / unq all: 855 1561 / 872 1593
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -3 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-23 2024-02-06]

2024-02-05T16:17:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7787518696 # 89
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 854 1559 / 871 1591
* notice: next accum: outdated-unq outdated-all / unq all: 855 1561 / 871 1592
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-22] / [2024-02-05]

2024-02-05T08:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7781466207 # 88
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 854 1559 / 870 1590
* notice: next accum: outdated-unq outdated-all / unq all: 854 1559 / 871 1591
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-22 2024-02-05]

2024-02-04T16:17:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7775300446 # 86