@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-06T08:18:38Z",
-  "count_outdated" : 1561,
-  "uniques_outdated" : 855,
-  "count" : 1593,
+  "timestamp" : "2024-02-06T16:18:28Z",
+  "count_outdated" : 1565,
+  "uniques_outdated" : 857,
+  "count" : 1594,
   "uniques" : 872,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
