@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-06T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
